# lcastor_perception

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
docker/: Dockerfile  build_docker.sh  entrypoint.sh  entrypoint_coco.sh  entrypoint_ycb.sh  run_docker.sh
launch/: object_detector.launch
scripts/: get_model.sh
src/: detector.py  get_model.py
src/lcastor_perception/: __init__.py  detector_manager.py  get_model.py  labels_imagenet.txt  labels_ycb.txt  object_detector.py  object_manager.py
srv/: DetectObjects.srv  LoadModel.srv  UnloadModel.srv
test/: test_detection_service.py
