<package format="2">
  <name>lcastor_perception</name>
  <version>0.0.1</version>
  <description>LCASTOR Perception</description>

  <maintainer email="nwagner@lincoln.ac.uk">Nikolaus Wagner</maintainer>

  <license>LGPL v2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>vision_msgs</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry</exec_depend>
  <exec_depend>image_geomtry</exec_depend>

</package>
